--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -41,7 +41,7 @@ ENV LANG en_US.utf8
 
 
 RUN mkdir /docker-entrypoint-initdb.d
-COPY ./_ops/init-db.sh /docker-entrypoint-initdb.d/10-init-db.sh
+COPY ./ops/init-db.sh /docker-entrypoint-initdb.d/10-init-db.sh
 
 RUN apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys B97B0AFCAA1A47F044F244A07FCC7D46ACCC4CF8
 
@@ -82,11 +82,11 @@ ENV PGDATA /var/lib/postgresql/data
 ENV POSTGRES_HOST_AUTH_METHOD trust
 RUN mkdir -p "$PGDATA" && chown -R postgres:postgres "$PGDATA" && chmod 777 "$PGDATA"
 
-COPY ./_ops/docker-db-entrypoint.sh /docker-db-entrypoint.sh
+COPY ./ops/docker-db-entrypoint.sh /docker-db-entrypoint.sh
 RUN chmod +x /docker-db-entrypoint.sh
 
 # App
-COPY ./_ops/docker-entrypoint.dev.sh /docker-entrypoint.sh
+COPY ./ops/docker-entrypoint.dev.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
