--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -22,6 +22,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.1.0
 MarkupSafe==1.1.1
+tensorboard==1.15.0
 psycopg2==2.8.3
 pycparser==2.19
 python-dateutil==2.8.0
