--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-chartjs-2": "^2.8.0",
     "react-circular-progressbar": "^2.0.3",
+    "react-content-loader": "^5.1.4",
     "react-dev-utils": "^9.0.1",
     "react-diff-view": "^2.4.0",
     "react-dom": "^16.12.0",
