Optimize explore panel rendering performance (#141)
* Switched from React context api to custom state management system

* Remove unnecessary key prop

* Apply lazy grouping and aggregation for trace list

--- a/client/package.json
+++ b/client/package.json
@@ -102,7 +102,7 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "eslint": "eslint . --ext .js",
     "eslint:fix": "eslint . --ext .js --fix",
-    "format": "prettier --write './**/*.{js,jsx,less,json}' --config ./.prettierrc",
+    "format": "prettier --write './**/*.{js,jsx,less,json}' --config ./.prettierrc && npm run eslint:fix",
     "test": "node scripts/test.js"
   },
   "browserslist": {
@@ -174,8 +174,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "npm run format",
-      "npm run eslint:fix"
+      "npm run format"
     ]
   }
 }
