Increase nginx request timeout to 600 seconds (#148)

--- a/ops/nginx-app.conf
+++ b/ops/nginx-app.conf
@@ -12,11 +12,16 @@ server {
         location /api {
                 proxy_pass http://0.0.0.0:43801;
                 proxy_http_version 1.1;
+
+                proxy_read_timeout 600;
+                proxy_connect_timeout 600;
+                proxy_send_timeout 600; 
         }
 
         location /live {
                 proxy_pass http://0.0.0.0:43802;
                 proxy_http_version 1.1;
+                
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection upgrade;
                 proxy_set_header Host $host;
