--- a/ops/nginx-app.conf
+++ b/ops/nginx-app.conf
@@ -16,6 +16,10 @@ server {
                 proxy_read_timeout 600;
                 proxy_connect_timeout 600;
                 proxy_send_timeout 600; 
+
+                gzip on;
+                gzip_min_length 1024;
+                gzip_types text/plain application/json;
         }
 
         location /live {
