--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-diff-view": "^2.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-json-view": "^1.20.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
