--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "d3": "^5.16.0",
     "highcharts": "^7.2.1",
     "highcharts-react-official": "^2.2.2",
+    "humanize-duration": "^3.25.1",
     "lodash": "^4.17.15",
     "markdown-react-js": "^1.0.2",
     "mini-css-extract-plugin": "0.5.0",
@@ -23,8 +24,8 @@
     "react-diff-view": "^2.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-rangeslider": "^2.2.0",
     "react-json-view": "^1.20.0",
+    "react-rangeslider": "^2.2.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
