--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "querystring": "^0.2.0",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-chartjs-2": "^2.8.0",
     "react-circular-progressbar": "^2.0.3",
     "react-content-loader": "^5.1.4",
