--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "d3": "^5.16.0",
     "highcharts": "^7.2.1",
     "highcharts-react-official": "^2.2.2",
+    "html2canvas": "^1.0.0-rc.7",
     "humanize-duration": "^3.25.1",
     "lodash": "^4.17.15",
     "markdown-react-js": "^1.0.2",
